# brdgme

./: .coree.toml  .dockerignore  .env.example  .envrc  .gitignore  .memso.toml  .mise.toml  .travis.yml  AGENTS.md  ARCHITECTURE.md  BUILD  Cargo.toml  Dockerfile  IMPLEMENTATION.md  PLAN.md  README.md  Tiltfile  WORKSPACE  all.sh  build.sh  ctlptl.yaml  devenv.nix  docker-bake.hcl  docker-compose.yml  go.mod  lint.sh  renovate.json  skaffold-configure-local-build.sh  skaffold.yaml  test.sh
brdgme-go/age_of_war/: .travis.yml  BUILD.bazel  attack_command.go  attack_test.go  castles.go  command.go  dice.go  game.go  game_test.go  line_command.go  render.go  roll_command.go
brdgme-go/age_of_war/cmd/: BUILD.bazel  main.go
brdgme-go/battleship_1/: BUILD.bazel  battleship.go  battleship_test.go  command.go
brdgme-go/battleship_1/cmd/: BUILD.bazel  main.go
brdgme-go/brdgme/: BUILD.bazel  LICENSE  command.go  command_test.go  game.go  int.go  int_test.go  log.go  placings.go  placings_test.go  reader.go  strings.go  strings_test.go
brdgme-go/cathedral_1/: BUILD.bazel  board.go  command.go  game.go  game_test.go  loc.go  piece.go  play_command.go  play_command_test.go  render.go  tile.go
brdgme-go/cathedral_1/cmd/: BUILD.bazel  main.go
brdgme-go/cmd/: BUILD.bazel  cli.go  cli_test.go  http.go  types.go
brdgme-go/farkle_1/: BUILD.bazel  command.go  done_command.go  farkle.go  farkle_test.go  roll_command.go  score_command.go  scores.go
brdgme-go/farkle_1/cmd/: BUILD.bazel  main.go
brdgme-go/liars_dice_1/: BUILD.bazel  bid_command.go  call_command.go  command.go  liars_dice.go  liars_dice_test.go
brdgme-go/liars_dice_1/cmd/: BUILD.bazel  main.go
brdgme-go/libcard/: BUILD.bazel  deck.go  deck_test.go  standard.go  standard_test.go  suit_rank.go
brdgme-go/libcost/: BUILD.bazel  cost.go  cost_test.go  perm.go  perm_test.go
brdgme-go/libdie/: BUILD.bazel  die.go  die_test.go
brdgme-go/libpoker/: BUILD.bazel  hand.go  hand_test.go
brdgme-go/render/: BUILD.bazel  align.go  canvas.go  color.go  render.go  table.go
brdgme-go/roll_through_the_ages_1/: BUILD.bazel  build_command.go  build_command_test.go  buy_command.go  buy_command_test.go  command.go  development.go  dice.go  discard_command.go  discard_command_test.go  game.go  game_test.go  good.go  good_test.go  invade_command.go  invade_command_test.go  monument.go  next_command.go  next_command_test.go  player_board.go  preserve_command.go  preserve_command_test.go  render.go  roll_command.go  roll_command_test.go  sell_command.go  sell_command_test.go  swap_command.go  swap_command_test.go  take_command.go  take_command_test.go  trade_command.go  trade_command_test.go
brdgme-go/roll_through_the_ages_1/cmd/: BUILD.bazel  main.go
brdgme-go/splendor_1/: BUILD.bazel  amount.go  amount_test.go  buy_command.go  card.go  card_test.go  command.go  discard_command.go  game.go  noble.go  noble_test.go  player_board.go  render.go  reserve_command.go  take_command.go  visit_command.go
brdgme-go/splendor_1/cmd/: BUILD.bazel  main.go
brdgme-go/sushizock_1/: BUILD.bazel  command.go  dice.go  sushizock.go  sushizock_test.go  tile.go  tile_test.go
brdgme-go/sushizock_1/cmd/: BUILD.bazel  main.go
brdgme-go/texas_holdem_1/: BUILD.bazel  command.go  texas_holdem.go  texas_holdem_test.go
brdgme-go/texas_holdem_1/cmd/: BUILD.bazel  main.go
brdgme-go/zombie_dice_1/: BUILD.bazel  command.go  dice.go  game.go  render.go
brdgme-go/zombie_dice_1/cmd/: BUILD.bazel  main.go
game/acquire/: .travis.yml  BUILD  Cargo.toml
game/acquire/src/: board.rs  command.rs  corp.rs  lib.rs  render.rs  stats.rs
game/lords-of-vegas/: .gitignore  BUILD  Cargo.toml
game/lords-of-vegas/src/: board.rs  card.rs  casino.rs  command.rs  lib.rs  render.rs  tile.rs
game/lost-cities/: .travis.yml  BUILD  Cargo.toml
game/lost-cities/src/: card.rs  command.rs  lib.rs  render.rs
lib/cmd/: .gitignore  BUILD  Cargo.toml
lib/cmd/src/: api.rs  bot_cli.rs  cli.rs  lib.rs  repl.rs
lib/fuzz/: Cargo.toml
lib/fuzz/src/: main.rs
lib/game/: BUILD  Cargo.toml
lib/game/src/: bot.rs  errors.rs  game.rs  game_log.rs  lib.rs
rust/: Cargo.toml  Dockerfile  deny.toml  rust-toolchain  rust-toolchain.toml
rust-legacy/api/: .travis.yml  Cargo.toml  cargo.sh  rust-toolchain
rust-legacy/api/src/: config.rs  errors.rs  game_client.rs  mail.rs  main.rs  render.rs  websocket.rs
rust/.sqlx/: query-09f7ef57c87c1cf56fcce094fb338f33eec95f978435354c4fb0938e70df2c78.json  query-0f30b80345c060ca27edaeb64b19474967638203c5af74c1430dfc2b76bf1802.json  query-0f488c44c7b7f3de04fbc0962a57b773be26840f61dbcdc094d81712d0a9c8e5.json  query-100965b1418d798d1391f03a897343df76a32b2c4056977365564230b1b81bba.json  query-182d090f774dd61638f7ce6c2e7594b37b8955e35c8fbe8ba78c80b751697bce.json  query-379d7598d1bb47fca7205f82372affc34808fe702f34ed484ec1da838c12d32f.json  query-44449605cee8e3ce5d97a28fa4dfb3111e0d935aab2289e38557894f7225693e.json  query-7e4ab39e9c4264a65c0c04345c276080c01e5d5c6dd279feddf6e6b653cf9e62.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-84458cc96eea3212bead5ffde44b1145044721f92f8cd2e7bff4b3dfb0e4b08d.json  query-b1e0cd1be63d1e64bc57d1f2d92e98180526b4df9ccc40a096d28e598fd857b1.json  query-d332728ad6ec8f3c83d5bd3c2850a053f433c5fc3ab6822791cc5afd351ec321.json  query-dadb86f65e923c8120b9a79224165cfa170b90f114e24c1d8fcceee60da96eb6.json  query-fba48d03da0799a2e242221ef2339e728eba65e76892d87b49a5afc5d3fe4963.json
rust/api/: .gitignore  Cargo.toml  Dockerfile
rust/api/deploy/: Dockerfile
rust/api/src/: config.rs  errors.rs  game_client.rs  mail.rs  main.rs  render.rs  websocket.rs
rust/bot/: Cargo.toml  system_prompt.md  user_prompt.md
rust/bot/src/: config.rs  crypto.rs  main.rs  nats.rs  prompt.rs  routing.rs
rust/game/acquire-1/: ADVANCED_STRATEGY.md  Cargo.toml  (+4 more)
rust/operator/: Cargo.toml
rust/web/: .env.example  .env.template  Cargo.toml  Dioxus.toml  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  test_db_integration.md  test_migration.sh
(+1576 files in other folders)
