[workspace]
members = [
    "api",
    "game/acquire-1",
    "game/lords-of-vegas-1",
    "game/lost-cities-1",
    "game/lost-cities-2",
    "lib/cmd",
    "lib/color",
    "lib/game",
    "lib/markup",
    "lib/rand_bot",
    "tools/fuzz",
    "tools/repl",
    "web",
]
resolver = "2"

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
inherits = "dev"

[profile.wasm-release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
inherits = "release"
