[workspace]
members = [
    "bot",
    "game/acquire-1",
    "game/age-of-war-2",
    "game/battleship-2",
    "game/cathedral-2",
    "game/category-5-2",
    "game/farkle-2",
    "game/for-sale-2",
    "game/greed-2",
    "game/jaipur-2",
    "game/lords-of-vegas-1",
    "game/lost-cities-1",
    "game/liars-dice-2",
    "game/lost-cities-2",
    "game/no-thanks-2",
    "game/sushi-go-2",
    "game/sushizock-2",
    "game/tic-tac-toe-2",
    "game/zombie-dice-2",
    "lib/cmd",
    "lib/color",
    "lib/game",
    "lib/markup",
    "lib/rand_bot",
    "tools/fuzz",
    "tools/render_plain",
    "tools/repl",
    "web",
    "operator",
]
resolver = "2"

[profile.android-dev]
inherits = "dev"

[profile.server-dev]
inherits = "dev"

[profile.wasm-dev]
opt-level = 1
inherits = "dev"

[profile.wasm-release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
inherits = "release"
