load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "attack_command.go",
        "castles.go",
        "command.go",
        "dice.go",
        "game.go",
        "line_command.go",
        "render.go",
        "roll_command.go",
    ],
    importpath = "github.com/brdgme-go/age_of_war",
    visibility = ["//visibility:public"],
    deps = [
        "//brdgme-go/brdgme:go_default_library",
        "//brdgme-go/render:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = [
        "attack_test.go",
        "game_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//brdgme-go/assert:go_default_library"],
)
