load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "command.go",
        "game.go",
        "int.go",
        "log.go",
        "placings.go",
        "reader.go",
        "strings.go",
    ],
    importpath = "github.com/brdgme-go/brdgme",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = [
        "command_test.go",
        "int_test.go",
        "placings_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//brdgme-go/assert:go_default_library"],
)
