load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "align.go",
        "canvas.go",
        "color.go",
        "render.go",
        "table.go",
    ],
    importpath = "github.com/brdgme-go/render",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["render_test.go"],
    embed = [":go_default_library"],
)
