load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

test_files = ["test.go", "*_test.go"]

go_library(
    name = "splendor_1",
    srcs = glob(["*.go"], test_files),
    deps = [
        "//brdgme-go/brdgme",
        "//brdgme-go/libcost",
        "//brdgme-go/render",
    ],
    importpath = "github.com/brdgme/brdgme/brdgme-go/splendor_1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "test",
    srcs = glob(test_files),
    deps = [
        "//brdgme-go/assert",
    ],
    embed = [":splendor_1"],
)
