load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

test_files = ["test.go", "*_test.go"]

go_library(
    name = "texas_holdem_1",
    srcs = glob(["*.go"], test_files),
    deps = [
        "//brdgme-go/brdgme",
        "//brdgme-go/libcard",
        "//brdgme-go/libpoker",
        "//brdgme-go/render",
    ],
    importpath = "github.com/brdgme/brdgme/brdgme-go/texas_holdem_1",
    visibility = ["//visibility:public"],
)

go_test(
    name = "test",
    srcs = glob(test_files),
    embed = [":texas_holdem_1"],
)
