[package]
name = "brdgme-cmd"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]
edition = "2018"

[dependencies]
brdgme-markup = { path = "../markup" }
brdgme-game = { path = "../game" }
brdgme-color = { path = "../color" }
serde = "1.0.0"
serde_derive = "1.0.0"
serde_json = "1.0.0"
chrono = { version = "0.4.0", features = ["serde"] }
failure = "0.1.1"
term_size = "0.2.3"
