[package]
name = "brdgme-fuzz"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]
edition = "2018"

[dependencies]
brdgme-cmd = { path = "../cmd" }
brdgme-game = { path = "../game" }
brdgme-rand-bot = { path = "../rand-bot" }
failure = "0.1.1"
rand = "0.4.2"
num_cpus = "1.8.0"
serde = "1.0.0"
