[package]
name = "brdgme-game"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]
edition = "2018"

[dependencies]
brdgme-markup = { path = "../markup" }
brdgme-color = { path = "../color" }
chrono = { version = "0.4.0", features = ["serde"] }
serde = "1.0.0"
serde_derive = "1.0.0"
combine = "2.3.1"
failure = "0.1.1"
rand = "0.3.15"
log = "0.3.7"
unicase = "1.4.0"
