[package]
name = "brdgme_api"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]
edition = "2018"

[dependencies]
brdgme_cmd = { path = "../lib/cmd" }
brdgme_game = { path = "../lib/game" }
brdgme_color = { path = "../lib/color" }
brdgme_markup = { path = "../lib/markup" }
lazy_static = "1.4.0"
r2d2 = "0.8.10"
rand = "0.8.5"
chrono = "0.4.38"
lettre = "0.11.6"
lettre_email = "0.9.4"
log = "0.4.21"
env_logger = "0.11.3"
uuid = { version = "0.8.0", features = ["serde", "v4"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
rocket = "0.5.0"
rocket_codegen = "0.5.0"
email = "0.0.21"
hyper = "1.3.1"
hyper-rustls = "0.27.1"
diesel = { version = "2.1.6", features = ["postgres", "uuid", "chrono", "32-column-tables"] }
r2d2-diesel = "1.0.0"
unicase = "2.7.0"
redis = "0.25.3"
anyhow = "1.0.82"
thiserror = "1.0.58"
bytes = "1.6.0"
