[package]
name = "brdgme_api"
version = "0.1.0"
authors = ["Michael Alexander <beefsack@gmail.com>"]
edition = "2018"

[dependencies]
brdgme_cmd = { path = "../lib/cmd" }
brdgme_game = { path = "../lib/game" }
brdgme_color = { path = "../lib/color" }
brdgme_markup = { path = "../lib/markup" }
lazy_static = "1.5.0"
r2d2 = "0.8.10"
rand = "0.9.0"
chrono = "0.4.39"
log = "0.4.25"
env_logger = "0.11.6"
uuid = { version = "1.12.1", features = ["serde", "v4"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rocket = { version = "0.5.1", features = ["json"] }
rocket_codegen = "0.5.1"
email = "0.0.21"
diesel = { version = "2.2.6", features = [
    "postgres",
    "uuid",
    "chrono",
    "32-column-tables",
] }
r2d2-diesel = "1.0.0"
unicase = "2.8.1"
redis = "0.28.2"
anyhow = "1.0.95"
thiserror = "2.0.11"
bytes = "1.9.0"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "charset",
    "json",
    "rustls-tls",
] }
