[package]
name = "brdgme_api"
version = "0.1.0"
publish = false
authors = ["Michael Alexander <beefsack@gmail.com>"]
edition = "2024"

[dependencies]
brdgme_cmd = { path = "../lib/cmd" }
brdgme_game = { path = "../lib/game" }
brdgme_color = { path = "../lib/color" }
brdgme_markup = { path = "../lib/markup" }
lazy_static = "1.5.0"
r2d2 = "0.8.10"
rand = "0.10.2"
chrono = { version = "0.4.45", features = ["serde"] }
log = "0.4.33"
env_logger = "0.11.11"
uuid = { version = "1.23.4", features = ["serde", "v4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rocket = { version = "0.5.1", features = ["json"] }
rocket_codegen = "0.5.1"
email = "0.0.21"
diesel = { version = "2.3.10", features = [
    "postgres",
    "uuid",
    "chrono",
    "32-column-tables",
] }
r2d2-diesel = "1.0.0"
unicase = "2.9.0"
redis = "1.3.0"
anyhow = "1.0.103"
thiserror = "2.0.18"
bytes = "1.12.0"
reqwest = { version = "0.13", default-features = false, features = [
    "http2",
    "charset",
    "json",
    "rustls",
] }
