[package]
name = "bot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bot"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "time"] }
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
brdgme_cmd = { path = "../lib/cmd", default-features = false }
brdgme_color = { path = "../lib/color" }
brdgme_game = { path = "../lib/game" }
brdgme_markup = { path = "../lib/markup" }
minijinja = "2"
serde_yaml = "0.9"
time = { version = "0.3", features = ["serde"] }
