[package]
name = "brdgme-operator"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "operator"
path = "src/main.rs"

[dependencies]
futures = "0.3"
k8s-openapi = { version = "0.27", features = ["latest"] }
kube = { version = "3", features = ["runtime", "derive", "client"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde"] }
