[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
axum = { version = "0.8.0", optional = true, features = ["ws", "macros"] }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
leptos_meta = { version = "0.8.0" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
wasm-bindgen = { version = "=0.2.100", optional = true }

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"], optional = true }
uuid = { version = "1.12.1", features = ["serde", "v4", "js"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

# Additional server dependencies
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tower = { version = "0.4", optional = true }
tower-sessions = { version = "0.13", optional = true }
tower-sessions-memory-store = { version = "0.13", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
anyhow = { version = "1.0.95", optional = true }
thiserror = { version = "2.0.11", optional = true }
async-trait = { version = "0.1", optional = true }

# Email functionality
email = { version = "0.0.21", optional = true }

# Redis for background processing
redis = { version = "0.28.2", optional = true }

# Environment variables
dotenv = { version = "0.15", optional = true }

# Game engine dependencies from existing API
brdgme_cmd = { path = "../lib/cmd", optional = true }
brdgme_game = { path = "../lib/game", optional = true }
brdgme_color = { path = "../lib/color", optional = true }
brdgme_markup = { path = "../lib/markup", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:sqlx",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tower",
    "dep:tower-sessions",
    "dep:anyhow",
    "dep:thiserror",
    "dep:email",
    "dep:redis",
    "dep:brdgme_cmd",
    "dep:brdgme_game",
    "dep:brdgme_color",
    "dep:brdgme_markup",
    "dep:dotenv",
    "dep:tower-sessions-memory-store",
    "dep:tower-http",
    "dep:async-trait",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "web"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
