[package]
name = "web"
version = "0.1.0"
publish = false
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# #34 dev-only import CLI (spec D5): never deployed; requires ssr because it
# links the server-side db/game modules.
[[bin]]
name = "import-game"
path = "src/bin/import_game.rs"
required-features = ["ssr"]

[dependencies]
leptos = { version = "0.8.20" }
leptos_router = { version = "0.8.14" }
axum = { version = "0.8.9", optional = true, features = ["ws", "macros"] }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.10", optional = true }
leptos_meta = { version = "0.8.6" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"], optional = true }
wasm-bindgen = { version = "=0.2.121", optional = true }

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "migrate"], optional = true }
uuid = { version = "1.23.4", features = ["serde", "v4", "js"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Additional server dependencies
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"], optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-sessions = { version = "0.14.0", optional = true }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["postgres"], optional = true }
tower-http = { version = "0.7", features = ["cors", "trace", "limit", "timeout"], optional = true }
anyhow = { version = "1.0.103", optional = true }
thiserror = { version = "2.0.18", optional = true }

# Email functionality
resend-rs = { version = "0.28", default-features = false, features = ["rustls-tls"], optional = true }

# Default-username generation (D3) - server-only
petname = { version = "=3.1.0", default-features = false, features = ["default-words", "default-rng"], optional = true }

# Markdown -> HTML for the rules/strategy render (#25). SSR-only: never in the
# WASM bundle (gated under the `ssr` feature, NOT `hydrate`).
pulldown-cmark = { version = "0.13.4", optional = true }

# Environment variables
dotenvy = { version = "0.15", optional = true }

# Game engine dependencies from existing API
brdgme_cmd = { path = "../lib/cmd", default-features = false, optional = true }
brdgme_game = { path = "../lib/game", optional = true }
brdgme_color = { path = "../lib/color", optional = true }
brdgme_markup = { path = "../lib/markup", optional = true }
brdgme_game_client = { path = "../lib/game_client", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"], optional = true }
aes-gcm = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
rand = "0.10.2"
futures-util = "0.3.32"
gloo-net = { version = "0.7", features = ["websocket"] }
gloo-timers = { version = "0.4", features = ["futures"] }
web-sys = { version = "0.3.77", features = ["Location", "Window", "Document", "HtmlDocument", "Element", "MediaQueryList"] }
js-sys = "0.3"
async-nats = { version = "0.49.1", optional = true }
leptos-use = { version = "0.19", default-features = false, features = ["use_websocket"] }
codee = { version = "0.3.5", default-features = false }
axum-prometheus = { version = "0.10.0", default-features = false, features = ["prometheus"], optional = true }

# Distributed tracing (OTLP export)
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", default-features = false, features = ["trace"], optional = true }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["grpc-tonic", "trace"], optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }

# Error tracking (Sentry). Default features (reqwest + native-tls transport) -
# no rustls involvement, see CODING.md's rustls crypto-provider section.
sentry = { version = "0.48", optional = true }
sentry-tower = { version = "0.48", optional = true, features = ["http"] }
sentry-tracing = { version = "0.48", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:brdgme_cmd",
    "dep:brdgme_game",
    "dep:brdgme_color",
    "dep:brdgme_markup",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:sqlx",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tower",
    "dep:tower-sessions",
    "dep:tower-sessions-sqlx-store",
    "dep:anyhow",
    "dep:thiserror",
    "dep:resend-rs",
    "dep:petname",
    "dep:pulldown-cmark",
    "dep:brdgme_cmd",
    "dep:brdgme_game",
    "dep:brdgme_game_client",
    "dep:brdgme_color",
    "dep:brdgme_markup",
    "dep:dotenvy",
    "dep:tower-http",
    "dep:reqwest",
    "dep:aes-gcm",
    "dep:hex",
    "dep:async-nats",
    "leptos-use/ssr",
    "dep:axum-prometheus",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    # Error tracking (Sentry)
    "dep:sentry",
    "dep:sentry-tower",
    "dep:sentry-tracing",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
serial_test = "3.5.0"
tokio-tungstenite = "0.30"

[package.metadata.leptos]
output-name = "web"
bin-target = "web"
site-root = "target/site"
site-pkg-dir = "pkg"
# Content-hash pkg/ asset filenames (web.<hash>.wasm/js/css) so Cloudflare
# edge caching can't serve stale JS glue against a new wasm after a deploy.
# The server must run with LEPTOS_HASH_FILES=true (set in rust/Dockerfile)
# for HydrationScripts to actually read hash.txt and emit hashed URLs.
hash-files = true
style-file = "style/main.scss"
# Assets source dir; copied/synced to site-root.
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
wasm-opt-features = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "-g"]
