load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/brdgme-go/age_of_war/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//brdgme-go/age_of_war:go_default_library",
        "//brdgme-go/cmd:go_default_library",
    ],
)

go_binary(
    name = "cmd",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
